2010-07-03 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-schemes-list.c (nact_schemes_list_create_model):
	Scheme keyword and description are editable in user preferences.

2010-07-02 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-tokens.c (na_tokens_new_from_selection):
	Add a trace.

	* src/core/na-tokens.h: Fix minor typo.

	* src/plugin-menu/nautilus-actions.c:
	There should not be any need to keep a reference to our menu.

	* data/nautilus-actions-prefs.schemas.in:
	* src/core/na-iprefs.h:
	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	Define a new GConf preference 'keep last user choice'.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c:
	from_uri() interface is renamed as import_from_uri().
	Only define na_iimporter_import_from_uri() public API.

	* src/core/na-importer.c:
	* src/core/na-importer.h:
	Define here na_importer_import_from_list() internal API.

	* src/io-xml/naxml-provider.c:
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-reader.h:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/test/test-reader.c: Updated accordingly.

	* src/core/na-object-id.c (na_object_id_set_new_id):
	Fix object type test.

	* src/core/na-object-item.c (object_id_new_id):
	Fix minor typo.

	* src/core/na-object-profile.c (object_id_new_id):
	Fix order of validity test.
	Only get a new profile name when a new parent is provided.

2010-06-29 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-tree-model-dnd.c (drop_uri_list):
	Make the code in adequation with the comment.

	* src/nact/nact-gtk-utils.c (nact_gtk_utils_get_pixbuf):
	Do not emit a warning when file is just not found.

2010-06-28 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-writer.c
	(nadp_writer_ifactory_provider_write_data):
	Concatenate path and parameters fields to the Exec key.

	* src/nact/nact-assistant-import.c (has_readable_files):
	Get ride of warning messages in some usual situations.
